[tool.poetry]
name = "accelarated-pso"
version = "0.1.0"
description = "accelarate PSO with joblib"
authors = ["Robert Guo <gsc1997@foxmail.com>"]
license = "GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
loguru = "^0.7.2"
joblib = "^1.4.2"
tqdm = "^4.66.5"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
